Archive2/a2/cae3a5a15fc273/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:14:15: error: ambiguous overload for 'operator<<' (operand types are 'std::ostream {aka std::basic_ostream<char>}' and 'std::string {aka std::basic_string<char>}')
     std::cout << v << std::endl;
               ^
main.cpp:14:15: note: candidates are:
main.cpp:6:15: note: std::ostream& operator<<(std::ostream&, const C&) [with C = std::basic_string<char>; <template-parameter-1-2> = __gnu_cxx::__normal_iterator<const char*, std::basic_string<char> >; std::ostream = std::basic_ostream<char>]
 std::ostream& operator<<(std::ostream& out, const C& v) {
               ^
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:2753:5: note: std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&, const std::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
     operator<<(basic_ostream<_CharT, _Traits>& __os,
     ^
